--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "jquery.scrollTo": "~1.4.12",
     "jquery": "~2.1.1",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "jQuery-One-Page-Nav": "latest"
+  },
+  "resolutions": {
+    "jquery": ">=1.8"
   }
 }
