updating site in preparation for fall 2016 hackathon

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "homepage": "https://github.com/5chackathon/5chackathon",
   "authors": [
     "Andy Russell <arussell123@gmail.com>",
-    "Aloke Desai <alokedesai@gmail.com>"
+    "Aloke Desai <alokedesai@gmail.com>",
+    "eli fessler <eliwf8@gmail.com>"
   ],
   "description": "Website for the 5C Hackathon",
   "license": "MIT",
