added Wentao as author

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
   "authors": [
     "Andy Russell <arussell123@gmail.com>",
     "Aloke Desai <alokedesai@gmail.com>",
-    "eli fessler <eliwf8@gmail.com>"
+    "eli fessler <eliwf8@gmail.com>",
+    "Wentao Guo <oatnewguo@gmail.com>"
   ],
   "description": "Website for the 5C Hackathon",
   "license": "MIT",
